# game

./: .gitignore  CMakeLists.txt  block.cpp  block.hpp  camera.cpp  camera.hpp  cmk.bat  compile.bat  main.cpp
engine/: CMakeLists.txt
engine/include/: camera.h  engine2d.h  globals.h  library.h  math_a.h
engine/src/: camera.c  engine2d.c  library.c  math_a.c
game/: CMakeLists.txt
game/include/: engine.h
game/src/: main.c
source/: CMakeLists.txt  additional_math.c  additional_math.h  block.cpp  block.hpp  camera.c  camera.cpp  camera.h  camera.hpp  engine.c  engine.h  engine2d.c  engine2d.h  main.c  main.cpp  test.cpp
source/Новая папка/: camera.cpp  camera.hpp  main.cpp
